Fix: added alignment of all elements

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,36 +1,75 @@
 body {
-    padding: 64px 0 0 0;
+    height: 100%;
     background: #3494E6;
-    background: linear-gradient(
-      to right,
-      #EC6EAD,
-      #3494E6
-    );
-    text-align: center;
-    color: #fff;
-    text-align: left;
+}
+
+header, footer {
+  margin-top: 5px;
+  margin-bottom: 16px ;
+  border: 4px solid #fff;
+  border-radius: 5px;
+  text-align: center;
 }
 
 h1 {
-  color: #fff;
-  font-size: 200%;
-  font-family: Arial;
-  text-align: center;
+  font-size: 30px;
   text-transform: capitalize;
-}     
-
-
-img {
-    width: 100px;
-    height: 100px;
-    filter: drop-shadow(1px 1px 1px #222);
-}
-
-pre {
-    font-weight: 600;
+  color: #fff;
 }
 
 footer {
-    height: 80px;
-	margin-top: -80px;
+  margin-top: auto;
+  justify-content: center;
+  padding: 5px;
+  background-color: #45a1ff;
+  color: #fff; 
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax((100px, auto));
+}
+
+.wrapper > div {
+  border: 2px solid #fff;
+  border-radius: 5px;
+  background: #fff;
+  padding: 10px;
+}
+.avatar {
+  grid-column: 1;
+  grid-row: 1/5;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+  filter: drop-shadow(1px 1px 1px #222);
+  width: 100%; height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  object-position: center;
+}
+
+.person_info {
+  grid-column: 1;
+  grid-row: 5/6 ;
+
+}
+
+.code_examples {
+  grid-column: 2/4;
+  grid-row: 1/3;
+}
+
+.quote_books {
+  grid-row: 3/3;
+  grid-column: 2/4;
+}
+
+.art_gallery {
+  grid-column: 2/4;
+  grid-row: 4/4;
 }
